--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Book Library</h1>
+	<div><h1>Book Library</h1></div>
     <div class="book-library">
 		
       <div class="book">
